adding logs changing the verification logic testing without repeated product checks